修改连接数据库字符

--- a/host/Dignite.Examining.IdentityServer/appsettings.json
+++ b/host/Dignite.Examining.IdentityServer/appsettings.json
@@ -5,7 +5,7 @@
   },
   "AppSelfUrl": "https://localhost:44312/",
   "ConnectionStrings": {
-    "Default": "Server=.;Database=Examining_Main;Trusted_Connection=True"
+    "Default": "Data Source=192.168.1.112;Initial Catalog=Examining_Main;Persist Security Info=True;User ID=developer;Password=123456"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
