--- a/host/Dignite.Examining.HttpApi.Host/Dignite.Examining.HttpApi.Host.csproj
+++ b/host/Dignite.Examining.HttpApi.Host/Dignite.Examining.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -18,16 +18,16 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="4.4.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="4.4.4" />
   </ItemGroup>
 
   <ItemGroup>
