--- a/src/Dignite.Examining.Application/Dignite.Examining.Application.csproj
+++ b/src/Dignite.Examining.Application/Dignite.Examining.Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.2" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.4.2" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.4.4" />
     <ProjectReference Include="..\Dignite.Examining.Application.Contracts\Dignite.Examining.Application.Contracts.csproj" />
     <ProjectReference Include="..\Dignite.Examining.Domain\Dignite.Examining.Domain.csproj" />
   </ItemGroup>
