--- a/src/Dignite.Examining.EntityFrameworkCore/Dignite.Examining.EntityFrameworkCore.csproj
+++ b/src/Dignite.Examining.EntityFrameworkCore/Dignite.Examining.EntityFrameworkCore.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="4.4.2" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="4.4.4" />
     <ProjectReference Include="..\Dignite.Examining.Domain\Dignite.Examining.Domain.csproj" />
   </ItemGroup>
 
