--- a/host/Dignite.Examining.HttpApi.Host/Dignite.Examining.HttpApi.Host.csproj
+++ b/host/Dignite.Examining.HttpApi.Host/Dignite.Examining.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -35,6 +35,7 @@
     <ProjectReference Include="..\..\src\Dignite.Examining.Application\Dignite.Examining.Application.csproj" />
     <ProjectReference Include="..\..\src\Dignite.Examining.EntityFrameworkCore\Dignite.Examining.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Dignite.Examining.Host.Shared\Dignite.Examining.Host.Shared.csproj" />
+	  <ProjectReference Include="..\..\..\Dignite.Abp\modules\identity\src\Dignite.Abp.Identity.HttpApi\Dignite.Abp.Identity.HttpApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
