--- a/host/Dignite.Examining.HttpApi.Host/appsettings.json
+++ b/host/Dignite.Examining.HttpApi.Host/appsettings.json
@@ -14,5 +14,10 @@
     "RequireHttpsMetadata": "false",
     "SwaggerClientId": "Examining_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
+  },
+  "RemoteServices": {
+    "DigniteAbpIdentity": {
+      "BaseUrl": "https://localhost:44312/"
+    }
   }
 }
