--- a/host/Dignite.Examining.IdentityServer/Dignite.Examining.IdentityServer.csproj
+++ b/host/Dignite.Examining.IdentityServer/Dignite.Examining.IdentityServer.csproj
@@ -48,6 +48,8 @@
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.4.4" />
     <ProjectReference Include="..\..\src\Dignite.Examining.Application.Contracts\Dignite.Examining.Application.Contracts.csproj" />
     <ProjectReference Include="..\Dignite.Examining.Host.Shared\Dignite.Examining.Host.Shared.csproj" />
+	  <ProjectReference Include="..\..\..\Dignite.Abp\modules\identity\src\Dignite.Abp.Identity.Application\Dignite.Abp.Identity.Application.csproj" />
+	  <ProjectReference Include="..\..\..\Dignite.Abp\modules\identity\src\Dignite.Abp.Identity.HttpApi\Dignite.Abp.Identity.HttpApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
