--- a/host/Dignite.Examining.IdentityServer/appsettings.json
+++ b/host/Dignite.Examining.IdentityServer/appsettings.json
@@ -5,7 +5,7 @@
   },
   "AppSelfUrl": "https://localhost:44312/",
   "ConnectionStrings": {
-    "Default": "Data Source=192.168.1.112;Initial Catalog=Examining_Main;Persist Security Info=True;User ID=developer;Password=123456"
+    "Default": "Data Source=192.168.1.114;Initial Catalog=Examining_Main;Persist Security Info=True;User ID=developer;Password=123456"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
@@ -35,6 +35,11 @@
         "ClientSecret": "1q2w3e*",
         "RootUrl": "https://localhost:44394"
       }
+    }
+  },
+  "RemoteServices": {
+    "AbpIdentity": {
+      "BaseUrl": "https://localhost:44312/"
     }
   }
 }
